4558.	[bug]		Synthesised CNAME before matching DNAME was still
			being cached when it should have been.  [RT #44318]

4557.	[security]	Combining dns64 and rpz can result in dereferencing
			a NULL pointer (read).  (CVE-2017-3135) [RT#44434]

4556.	[bug]		Sending an EDNS Padding option using "dig
			+ednsopt" could cause a crash in dig. [RT #44462]

4555.	[func]		dig +ednsopt: EDNS options can now be specified by
			name in addition to numeric value. [RT #44461]

4554.	[bug]		Remove double unlock in dns_dispatchmgr_setudp.
			[RT #44336]

4553.	[bug]		Named could deadlock there were multiple changes to
			NSEC/NSEC3 parameters for a zone being processed at
			the same time. [RT #42770]

4552.	[bug]		Named could trigger a assertion when sending notify
			messages. [RT #44019]

4551.	[test]		Add system tests for integrity checks of MX and
			SRV records. [RT #43953]

4550.	[cleanup]	Increased the number of available master file
			output style flags from 32 to 64. [RT #44043]

4549.	[func]		Added support for the EDNS TCP Keepalive option
			(RFC 7828). [RT #42126]

4548.	[func]		Added support for the EDNS Padding option (RFC 7830).
			[RT #42094]

4547.	[port]		Add support for --enable-native-pkcs11 on the AEP
			Keyper HSM. [RT #42463]

4546.	[func]		Extend the use of const declarations. [RT #43379]

4545.	[func]		Expand YAML output from dnstap-read to include
			a detailed breakdown of the DNS message contents.
			[RT #43642]

4544.	[bug]		Add message/payload size to dnstap-read YAML output.
			[RT #43622]

4543.	[bug]		dns_client_startupdate now delays sending the update
			request until isc_app_ctxrun has been called.
			[RT #43976]

4542.	[func]		Allow rndc to manipulate redirect zones with using
			-redirect as the zone name (use "-redirect." to
			manipulate a zone named "-redirect"). [RT #43971]

4541.	[bug]		rndc addzone should properly reject non master/slave
			zones. [RT #43665]

4540.	[bug]		Correctly handle ecs entries in dns_acl_isinsecure.