@@ -1,3 +1,9 @@
+4560.	[bug]		mdig: add -m option to enable memory debugging rather
+			than have in on all the time. [RT #44509]
+
+4559.	[bug]  		Openssl_link.c didn't compile if ISC_MEM_TRACKLINES
+			was turned off.  [RT #44509]
+
 4558.	[bug]		Synthesised CNAME before matching DNAME was still
 			being cached when it should have been.  [RT #44318]
 
